registration fixed